lib/installers/k8s/cryptpad/templates/tfgw-cryptpad.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: @{config_values.namespace}
